# libsigscan

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libsigscan-wiki.ini  libsigscan.ini  libsigscan.pc.in  libsigscan.spec.in  pyproject.toml.in  setup.cfg.in  setup.py  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  tox.ini
.travis/: before_install.sh  runtests.sh  script.sh
common/: config_winapi.h  file_stream.h  memory.h  wide_string.h
dpkg/: control  (+5 more)
include/: Makefile.am  libsigscan.h.in
include/libsigscan/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libsigscan/: Makefile.am  libsigscan.c  libsigscan.rc.in  libsigscan_byte_value_group.c  libsigscan_byte_value_group.h  libsigscan_codepage.h  libsigscan_debug.c  libsigscan_debug.h  libsigscan_definitions.h.in  libsigscan_error.c  libsigscan_error.h  libsigscan_extern.h  libsigscan_identifier.c  libsigscan_identifier.h  libsigscan_libbfio.h  libsigscan_libcdata.h  libsigscan_libcerror.h  libsigscan_libclocale.h  libsigscan_libcnotify.h  libsigscan_libcstring.h  libsigscan_libuna.h  libsigscan_notify.c  libsigscan_notify.h  libsigscan_offset_group.c  libsigscan_offset_group.h  libsigscan_offsets_list.c  libsigscan_offsets_list.h  libsigscan_pattern_weights.c  libsigscan_pattern_weights.h  libsigscan_scan_object.c  libsigscan_scan_object.h  libsigscan_scan_result.c  libsigscan_scan_result.h  libsigscan_scan_state.c  libsigscan_scan_state.h  libsigscan_scan_tree.c  libsigscan_scan_tree.h  libsigscan_scan_tree_node.c  libsigscan_scan_tree_node.h  libsigscan_scan_tree_values.c  (+21 more)
msvscpp/: Makefile.am  libsigscan.sln
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libsigscan/: libsigscan.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/pysigscan/: pysigscan.vcproj
msvscpp/sigscan/: sigscan.vcproj
msvscpp/sigscan_test_byte_value_group/: sigscan_test_byte_value_group.vcproj
msvscpp/sigscan_test_error/: sigscan_test_error.vcproj
msvscpp/sigscan_test_get_version/: sigscan_test_get_version.vcproj
msvscpp/sigscan_test_identifier/: sigscan_test_identifier.vcproj
msvscpp/sigscan_test_notify/: sigscan_test_notify.vcproj
msvscpp/sigscan_test_offset_group/: sigscan_test_offset_group.vcproj
msvscpp/sigscan_test_offsets_list/: sigscan_test_offsets_list.vcproj
msvscpp/sigscan_test_pattern_weights/: sigscan_test_pattern_weights.vcproj
msvscpp/sigscan_test_scan_object/: sigscan_test_scan_object.vcproj
msvscpp/sigscan_test_scan_result/: sigscan_test_scan_result.vcproj
msvscpp/sigscan_test_scan_state/: sigscan_test_scan_state.vcproj
msvscpp/sigscan_test_scan_tree/: sigscan_test_scan_tree.vcproj
msvscpp/sigscan_test_scan_tree_node/: sigscan_test_scan_tree_node.vcproj
msvscpp/sigscan_test_scanner/: sigscan_test_scanner.vcproj
msvscpp/sigscan_test_signature/: sigscan_test_signature.vcproj
msvscpp/sigscan_test_signature_group/: sigscan_test_signature_group.vcproj
msvscpp/sigscan_test_signature_table/: sigscan_test_signature_table.vcproj
msvscpp/sigscan_test_signatures_list/: sigscan_test_signatures_list.vcproj
msvscpp/sigscan_test_skip_table/: sigscan_test_skip_table.vcproj
msvscpp/sigscan_test_support/: sigscan_test_support.vcproj
msvscpp/sigscan_test_weight_group/: sigscan_test_weight_group.vcproj
ossfuzz/: Makefile.am  ossfuzz_libsigscan.h  scanner_fuzzer.cc
pysigscan/: Makefile.am  pysigscan.c  pysigscan.h  pysigscan_error.c  pysigscan_error.h  pysigscan_file_object_io_handle.c  pysigscan_file_object_io_handle.h  pysigscan_integer.c  pysigscan_integer.h  pysigscan_libbfio.h  pysigscan_libcerror.h  pysigscan_libclocale.h  pysigscan_libcstring.h  pysigscan_libsigscan.h  pysigscan_python.h  pysigscan_scan_result.c  pysigscan_scan_result.h  pysigscan_scan_results.c  pysigscan_scan_results.h  pysigscan_scan_state.c  pysigscan_scan_state.h  pysigscan_scanner.c  pysigscan_scanner.h  pysigscan_signature_flags.c  pysigscan_signature_flags.h  pysigscan_unused.h  setup.py.in
pysigscan-python2/: Makefile.am
sigscantools/: Makefile.am  scan_handle.c  scan_handle.h  signature_definitions.c  signature_definitions.h  sigscan.c  sigscanoutput.c  sigscanoutput.h  sigscantools_getopt.c  sigscantools_getopt.h  sigscantools_i18n.h  sigscantools_libbfio.h  sigscantools_libcdata.h  sigscantools_libcerror.h  sigscantools_libcfile.h  sigscantools_libclocale.h  sigscantools_libcnotify.h  sigscantools_libcstring.h  sigscantools_libcsystem.h  sigscantools_libfdatetime.h  sigscantools_libsigscan.h  sigscantools_libuna.h  sigscantools_output.c  sigscantools_output.h  sigscantools_signal.c  sigscantools_signal.h  sigscantools_unused.h
tests/: Makefile.am  atlocal.in  pkgbuild.sh  pysigscan_test_scanner.py  pysigscan_test_support.py  runtests.py  runtests.sh  sigscan_test_byte_value_group.c  sigscan_test_error.c  sigscan_test_functions.c  sigscan_test_functions.h  sigscan_test_get_version.c  sigscan_test_getopt.c  sigscan_test_getopt.h  sigscan_test_identifier.c  sigscan_test_libbfio.h  sigscan_test_libcdata.h  sigscan_test_libcerror.h  sigscan_test_libclocale.h  sigscan_test_libcnotify.h  sigscan_test_libcstring.h  sigscan_test_libsigscan.h  sigscan_test_libuna.h  sigscan_test_macros.h  sigscan_test_memory.c  sigscan_test_memory.h  sigscan_test_notify.c  sigscan_test_offset_group.c  sigscan_test_offsets_list.c  sigscan_test_pattern_weights.c  sigscan_test_scan_object.c  sigscan_test_scan_result.c  sigscan_test_scan_state.c  sigscan_test_scan_tree.c  sigscan_test_scan_tree_node.c  sigscan_test_scanner.c  sigscan_test_signature.c  sigscan_test_signature_group.c  sigscan_test_signature_table.c  sigscan_test_signatures_list.c  (+20 more)
(+13 files in other folders)
