include_HEADERS = \
	libsigscan.h

pkginclude_HEADERS = \
	libsigscan/codepage.h \
	libsigscan/definitions.h \
	libsigscan/error.h \
	libsigscan/extern.h \
	libsigscan/features.h \
	libsigscan/types.h

EXTRA_DIST = \
	libsigscan.h.in \
	libsigscan/definitions.h.in \
	libsigscan/features.h.in \
	libsigscan/types.h.in

DISTCLEANFILES = \
	libsigscan.h \
	libsigscan/definitions.h \
	libsigscan/features.h \
	libsigscan/types.h \
	Makefile \
	Makefile.in

