MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libsigscan/libsigscan.vcproj \
	libuna/libuna.vcproj \
	pysigscan/pysigscan.vcproj \
	sigscan/sigscan.vcproj \
	sigscan_test_error/sigscan_test_error.vcproj \
	sigscan_test_scanner/sigscan_test_scanner.vcproj \
	sigscan_test_support/sigscan_test_support.vcproj \
	libsigscan.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

