MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libsigscan/libsigscan.vcproj \
	libuna/libuna.vcproj \
	pysigscan/pysigscan.vcproj \
	sigscan/sigscan.vcproj \
	sigscan_test_byte_value_group/sigscan_test_byte_value_group.vcproj \
	sigscan_test_error/sigscan_test_error.vcproj \
	sigscan_test_notify/sigscan_test_notify.vcproj \
	sigscan_test_offset_group/sigscan_test_offset_group.vcproj \
	sigscan_test_pattern_weights/sigscan_test_pattern_weights.vcproj \
	sigscan_test_scan_object/sigscan_test_scan_object.vcproj \
	sigscan_test_scan_result/sigscan_test_scan_result.vcproj \
	sigscan_test_scan_state/sigscan_test_scan_state.vcproj \
	sigscan_test_scan_tree/sigscan_test_scan_tree.vcproj \
	sigscan_test_scan_tree_node/sigscan_test_scan_tree_node.vcproj \
	sigscan_test_scanner/sigscan_test_scanner.vcproj \
	sigscan_test_signature/sigscan_test_signature.vcproj \
	sigscan_test_signature_group/sigscan_test_signature_group.vcproj \
	sigscan_test_signature_table/sigscan_test_signature_table.vcproj \
	sigscan_test_skip_table/sigscan_test_skip_table.vcproj \
	sigscan_test_support/sigscan_test_support.vcproj \
	sigscan_test_weight_group/sigscan_test_weight_group.vcproj \
	libsigscan.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

